--- a/index.html
+++ b/index.html
@@ -27,21 +27,70 @@
 </head>
 <body class="font-sans text-gray-800">
 
-    <!-- Header -->
-  <header class="bg-white shadow-md fixed w-full z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      <a href="#inicio">
-        <img src="logo-mgservices-group.jpeg" alt="MG Service Group SAS" class="h-20">
-      </a>
+<!-- Header -->
+<header class="bg-white shadow-md fixed w-full z-50">
+  <div class="container mx-auto flex justify-between items-center p-4">
+    <a href="#inicio">
+      <img src="logo-mgservices-group.jpeg" alt="MG Service Group SAS" class="h-20">
+    </a>
 
-      <!-- Botón hamburguesa (solo móvil) -->
-      <button id="menuBtn" class="md:hidden text-gray-800 focus:outline-none">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none"
-             viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M4 6h16M4 12h16M4 18h16"/>
-        </svg>
-      </button>
+    <!-- Botón hamburguesa (visible solo en móvil) -->
+    <button id="menu-btn" class="md:hidden text-gray-800 focus:outline-none">
+      <i data-feather="menu" class="w-8 h-8"></i>
+    </button>
+
+    <!-- Navegación -->
+    <nav id="menu" class="hidden md:flex space-x-8 ml-12 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent shadow-md md:shadow-none opacity-0 md:opacity-100 transform md:translate-y-0 -translate-y-5 transition-all duration-300 ease-in-out">
+      <a href="#inicio" class="block px-4 py-2 hover:bg-black hover:text-white transition">Inicio</a>
+      <a href="#quienes" class="block px-4 py-2 hover:bg-black hover:text-white transition">Quiénes Somos</a>
+      <a href="#servicios" class="block px-4 py-2 hover:bg-black hover:text-white transition">Servicios</a>
+      <a href="#proyectos" class="block px-4 py-2 hover:bg-black hover:text-white transition">Proyectos</a>
+      <a href="#aliados" class="block px-4 py-2 hover:bg-black hover:text-white transition">Aliados</a>
+      <a href="#contacto" class="block px-4 py-2 hover:bg-black hover:text-white transition">Contacto</a>
+      <a href="#politica" class="block px-4 py-2 hover:bg-black hover:text-white transition">Política de Datos</a>
+    </nav>
+  </div>
+</header>
+
+<script>
+  const menuBtn = document.getElementById("menu-btn");
+  const menu = document.getElementById("menu");
+
+  menuBtn.addEventListener("click", (e) => {
+    e.stopPropagation();
+    menu.classList.toggle("hidden");
+
+    // Activar animación con opacidad y deslizamiento
+    setTimeout(() => {
+      menu.classList.toggle("opacity-100");
+      menu.classList.toggle("translate-y-0");
+      menu.classList.toggle("-translate-y-5");
+    }, 10);
+  });
+
+  // Cerrar menú al hacer clic en un enlace
+  menu.querySelectorAll("a").forEach(link => {
+    link.addEventListener("click", () => {
+      if (window.innerWidth < 768) {
+        menu.classList.add("hidden");
+        menu.classList.remove("opacity-100", "translate-y-0");
+        menu.classList.add("-translate-y-5");
+      }
+    });
+  });
+
+  // Cerrar menú al hacer clic fuera
+  document.addEventListener("click", (e) => {
+    if (!menu.contains(e.target) && !menuBtn.contains(e.target)) {
+      if (!menu.classList.contains("hidden") && window.innerWidth < 768) {
+        menu.classList.add("hidden");
+        menu.classList.remove("opacity-100", "translate-y-0");
+        menu.classList.add("-translate-y-5");
+      }
+    }
+  });
+</script>
+
 
       <!-- Menú principal -->
       <nav id="menuNav" class="hidden md:flex space-x-8 ml-12">
@@ -462,6 +511,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
