--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <!-- Header -->
 <header class="bg-white shadow-md fixed w-full z-50">
   <div class="container mx-auto flex justify-between items-center p-4">
+    <!-- Logo -->
     <a href="#inicio">
       <img src="logo-mgservices-group.jpeg" alt="MG Service Group SAS" class="h-20">
     </a>
@@ -40,7 +41,8 @@
     </button>
 
     <!-- Navegación -->
-    <nav id="menu" class="hidden md:flex space-x-8 ml-12 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent shadow-md md:shadow-none opacity-0 md:opacity-100 transform md:translate-y-0 -translate-y-5 transition-all duration-300 ease-in-out">
+    <nav id="menu" 
+         class="hidden md:flex space-x-8 ml-12 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent shadow-md md:shadow-none opacity-0 md:opacity-100 transform md:translate-y-0 -translate-y-5 transition-all duration-300 ease-in-out">
       <a href="#inicio" class="block px-4 py-2 hover:bg-black hover:text-white transition">Inicio</a>
       <a href="#quienes" class="block px-4 py-2 hover:bg-black hover:text-white transition">Quiénes Somos</a>
       <a href="#servicios" class="block px-4 py-2 hover:bg-black hover:text-white transition">Servicios</a>
@@ -52,6 +54,7 @@
   </div>
 </header>
 
+<!-- Script del menú -->
 <script>
   const menuBtn = document.getElementById("menu-btn");
   const menu = document.getElementById("menu");
@@ -60,7 +63,7 @@
     e.stopPropagation();
     menu.classList.toggle("hidden");
 
-    // Activar animación con opacidad y deslizamiento
+    // Animación de aparición
     setTimeout(() => {
       menu.classList.toggle("opacity-100");
       menu.classList.toggle("translate-y-0");
@@ -68,7 +71,7 @@
     }, 10);
   });
 
-  // Cerrar menú al hacer clic en un enlace
+  // Cerrar al hacer clic en un enlace
   menu.querySelectorAll("a").forEach(link => {
     link.addEventListener("click", () => {
       if (window.innerWidth < 768) {
@@ -79,7 +82,7 @@
     });
   });
 
-  // Cerrar menú al hacer clic fuera
+  // Cerrar al hacer clic fuera
   document.addEventListener("click", (e) => {
     if (!menu.contains(e.target) && !menuBtn.contains(e.target)) {
       if (!menu.classList.contains("hidden") && window.innerWidth < 768) {
@@ -157,63 +160,60 @@
     <h2 class="text-3xl text-center mb-12 titulo-fuerte">Nuestros Servicios</h2>
     <div class="grid md:grid-cols-3 gap-12 text-center">
       
-      <!-- Diseño y Fabricación -->
-      <div class="relative group bg-white shadow-lg rounded-xl overflow-hidden">
-        <img src="diseño.png" alt="Diseño y Fabricación" 
-             class="w-full h-64 object-contain p-6 transition-transform duration-300 group-hover:scale-105">
-        <div class="p-4">
-          <h3 class="text-xl font-bold mb-2">Diseño y Fabricación</h3>
-          <p class="text-gray-600">Estructuras metálicas personalizadas y resistentes.</p>
-        </div>
-        <!-- Overlay -->
-        <div class="absolute inset-0 bg-black bg-opacity-90 text-white p-6 flex flex-col justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-          <h4 class="text-lg font-bold mb-3">Más Información</h4>
-          <p class="text-sm leading-relaxed">
-            Fabricamos estructuras metálicas a la medida de tu proyecto: livianas, pesadas o industriales. 
-            Usamos tecnología de precisión, materiales de alta calidad y un equipo especializado para garantizar seguridad y durabilidad.
-          </p>
-        </div>
-      </div>
-
-      <!-- Mantenimiento Industrial -->
-      <div class="relative group bg-white shadow-lg rounded-xl overflow-hidden">
-        <img src="mantenimiento.png" alt="Mantenimiento" 
-             class="w-full h-64 object-contain p-6 transition-transform duration-300 group-hover:scale-105">
-        <div class="p-4">
-          <h3 class="text-xl font-bold mb-2">Mantenimiento Industrial</h3>
-          <p class="text-gray-600">Prevenir daños y alargar la vida útil.</p>
-        </div>
-        <!-- Overlay -->
-        <div class="absolute inset-0 bg-black bg-opacity-90 text-white p-6 flex flex-col justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-          <h4 class="text-lg font-bold mb-3">Más Información</h4>
-          <p class="text-sm leading-relaxed">
-            Ofrecemos mantenimientos preventivos y correctivos para cubiertas y fachadas. 
-            Aseguramos un funcionamiento óptimo, reducimos riesgos de filtraciones y evitamos reparaciones costosas a futuro.
-          </p>
-        </div>
-      </div>
-
-      <!-- Panel en Poliuretano -->
-      <div class="relative group bg-white shadow-lg rounded-xl overflow-hidden">
-        <img src="panel.png" alt="Panel en Poliuretano" 
-             class="w-full h-64 object-contain p-6 transition-transform duration-300 group-hover:scale-105">
-        <div class="p-4">
-          <h3 class="text-xl font-bold mb-2">Panel en Poliuretano</h3>
-          <p class="text-gray-600">Eficiencia y aislamiento de alto nivel.</p>
-        </div>
-        <!-- Overlay -->
-        <div class="absolute inset-0 bg-black bg-opacity-90 text-white p-6 flex flex-col justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-          <h4 class="text-lg font-bold mb-3">Más Información</h4>
-          <p class="text-sm leading-relaxed">
-            Instalamos paneles en poliuretano tipo sándwich, ideales para cámaras frigoríficas y cubiertas industriales. 
-            Garantizan aislamiento térmico, reducción de costos energéticos y un acabado impecable.
-          </p>
-        </div>
-      </div>
-
-    </div>
+     <!-- Diseño y Fabricación -->
+<a href="disenoyfabricacion.html" class="relative group bg-white shadow-lg rounded-xl overflow-hidden block">
+  <img src="diseño.png" alt="Diseño y Fabricación" 
+       class="w-full h-64 object-contain p-6 transition-transform duration-300 group-hover:scale-105">
+  <div class="p-4">
+    <h3 class="text-xl font-bold mb-2">Diseño y Fabricación</h3>
+    <p class="text-gray-600">Estructuras metálicas personalizadas y resistentes.</p>
   </div>
-</section>
+  <!-- Overlay -->
+  <div class="absolute inset-0 bg-black bg-opacity-90 text-white p-6 flex flex-col justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+    <h4 class="text-lg font-bold mb-3">Más Información</h4>
+    <p class="text-sm leading-relaxed text-center">
+      Fabricamos estructuras metálicas a la medida: livianas, pesadas o industriales, con soldadura certificada y control dimensional riguroso.
+    </p>
+  </div>
+</a>
+
+<!-- Mantenimiento Industrial -->
+<a href="mantenimiento-industrial.html" class="relative group bg-white shadow-lg rounded-xl overflow-hidden block">
+  <img src="mantenimiento.png" alt="Mantenimiento Industrial" 
+       class="w-full h-64 object-contain p-6 transition-transform duration-300 group-hover:scale-105">
+  <div class="p-4">
+    <h3 class="text-xl font-bold mb-2">Mantenimiento Industrial</h3>
+    <p class="text-gray-600">Prevenir daños y alargar la vida útil.</p>
+  </div>
+  <!-- Overlay -->
+  <div class="absolute inset-0 bg-black bg-opacity-90 text-white p-6 flex flex-col justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+    <h4 class="text-lg font-bold mb-3">Más Información</h4>
+    <p class="text-sm leading-relaxed text-center">
+      Programas preventivos y correctivos para cubiertas y estructuras. Menos paradas, más seguridad y durabilidad.
+    </p>
+  </div>
+</a>
+
+<!-- Panel en Poliuretano -->
+<a href="panel-poliuretano.html" class="relative group bg-white shadow-lg rounded-xl overflow-hidden block">
+  <img src="panel.png" alt="Panel en Poliuretano" 
+       class="w-full h-64 object-contain p-6 transition-transform duration-300 group-hover:scale-105">
+  <div class="p-4">
+    <h3 class="text-xl font-bold mb-2">Panel en Poliuretano</h3>
+    <p class="text-gray-600">Eficiencia y aislamiento de alto nivel.</p>
+  </div>
+  <!-- Overlay -->
+  <div class="absolute inset-0 bg-black bg-opacity-90 text-white p-6 flex flex-col justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300">
+    <h4 class="text-lg font-bold mb-3">Más Información</h4>
+    <p class="text-sm leading-relaxed text-center">
+      Paneles tipo sándwich con aislamiento térmico superior. Perfectos para cámaras frías, techos y fachadas industriales.
+    </p>
+  </div>
+</a>
+
+</div> <!-- cierre de grid -->
+</div> <!-- cierre de container -->
+</section> <!-- cierre correcto de Servicios -->
 
 
   <!-- Proyectos -->
@@ -539,6 +539,8 @@
   </script>
 </body>
 </html>
+
+
 
 
 
