--- a/index.html
+++ b/index.html
@@ -1,28 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <!-- SEO BÁSICO -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>MG Service Group SAS</title>
+  <title>Instalación de cubiertas metálicas y estructuras en Bogotá | MG Service Group SAS</title>
+  <meta name="description" content="Empresa experta en cubiertas metálicas, estructuras, fachadas y paneles de poliuretano en Bogotá. Calidad garantizada y atención profesional.">
+
+  <!-- SEO LOCAL / NEGOCIO -->
+  <meta name="keywords" content="cubiertas metálicas Bogotá, estructuras metálicas, panel de poliuretano, mantenimiento industrial, techos industriales, MG Service Group, cubiertas industriales Colombia">
+  <meta name="author" content="MG Service Group SAS">
+  <meta name="geo.region" content="CO">
+  <meta name="geo.placename" content="Bogotá">
+  <meta name="geo.position" content="4.6011;-74.1370">
+  <meta name="ICBM" content="4.6011, -74.1370">
+
+  <!-- OPEN GRAPH PARA REDES SOCIALES -->
+  <meta property="og:title" content="Cubiertas y estructuras metálicas en Bogotá | MG Service Group SAS">
+  <meta property="og:description" content="Instalación de cubiertas, fachadas, estructuras metálicas y paneles termoacústicos. Construimos con calidad y precisión.">
+  <meta property="og:image" content="https://www.mgservicesas.com/logo-mgservices-group.jpeg">
+  <meta property="og:url" content="https://www.mgservicesas.com">
+  <meta property="og:type" content="website">
+
+  <!-- FAVICON -->
+  <link rel="icon" type="image/jpeg" href="logo-mgservices-group.jpeg"/>
+
+  <!-- ESTILOS Y FUENTES -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/feather-icons"></script>
-  <link rel="icon" type="image/jpeg" href="logo-mgservices-group.jpeg"/>
+
+  <!-- DATOS ESTRUCTURADOS JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "MG Service Group SAS",
+    "image": "https://www.mgservicesas.com/logo-mgservices-group.jpeg",
+    "url": "https://www.mgservicesas.com",
+    "telephone": "+573143101649",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Cra. 72J #42G-21 Sur",
+      "addressLocality": "Bogotá",
+      "addressCountry": "CO"
+    },
+    "openingHours": "Mo-Fr 08:00-17:00",
+    "description": "Instalación de cubiertas metálicas, estructuras y paneles de poliuretano en Bogotá. Expertos en mantenimiento industrial y techos termoacústicos."
+  }
+  </script>
+
   <style>
-    html{scroll-behavior:smooth}
-    .titulo-fuerte{font-family:'Anton',sans-serif;letter-spacing:1px}
-    .input-like{background:#f3f4f6;border-radius:10px;padding:14px 16px;border:2px solid #e5e7eb;outline:none}
-    .input-like:focus{border-color:#2563eb;background:#fff}
+    html { scroll-behavior: smooth }
+    .titulo-fuerte { font-family:'Anton',sans-serif; letter-spacing:1px }
+    .input-like { background:#f3f4f6; border-radius:10px; padding:14px 16px; border:2px solid #e5e7eb; outline:none }
+    .input-like:focus { border-color:#2563eb; background:#fff }
     /* Modal */
-    .modal{display:none;position:fixed;z-index:9999;inset:0;background:rgba(0,0,0,.9)}
-    .modal-content{margin:auto;display:block;max-width:95%;max-height:90%;border-radius:10px}
-    .close{position:absolute;top:20px;right:40px;color:#fff;font-size:40px;font-weight:bold;cursor:pointer}
-    /* Animaciones */
+    .modal { display:none; position:fixed; z-index:9999; inset:0; background:rgba(0,0,0,.9) }
+    .modal-content { margin:auto; display:block; max-width:95%; max-height:90%; border-radius:10px }
+    .close { position:absolute; top:20px; right:40px; color:#fff; font-size:40px; font-weight:bold; cursor:pointer }
     @keyframes slideIn {0%{opacity:0;transform:translateX(-50px)}100%{opacity:1;transform:translateX(0)}}
-    .animate-slide-in{animation:slideIn 1s ease-out forwards}
-    .delay-200{animation-delay:.2s}.delay-400{animation-delay:.4s}
-    /* Toast */
-    #toast{position:fixed;right:16px;bottom:16px;background:#111827;color:white;padding:12px 16px;border-radius:10px;display:none;z-index:10000}
+    .animate-slide-in { animation:slideIn 1s ease-out forwards }
+    .delay-200 { animation-delay:.2s } .delay-400 { animation-delay:.4s }
+    #toast { position:fixed; right:16px; bottom:16px; background:#111827; color:white; padding:12px 16px; border-radius:10px; display:none; z-index:10000 }
   </style>
 </head>
 <body class="font-sans text-gray-800">
@@ -539,6 +579,7 @@
   </script>
 </body>
 </html>
+
 
 
 
