--- a/panel-poliuretano.html
+++ b/panel-poliuretano.html
@@ -9,22 +9,22 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <link rel="icon" type="image/jpeg" href="logo-mgservices-group.jpeg"/>
   <style>
-    html{scroll-behavior:smooth}
-    .titulo-fuerte{font-family:'Anton',sans-serif;letter-spacing:1px}
+    html { scroll-behavior:smooth; }
+    .titulo-fuerte { font-family:'Anton',sans-serif;letter-spacing:1px; }
 
-    /* Banner industrial */
-    .parallax{
-      background-image:url('bannerpanel.jpeg'); /* tu imagen del banner */
+    /* Banner */
+    .parallax {
+      background-image:url('bannerpanel.jpeg');
       background-attachment:fixed;
       background-position:center;
       background-size:cover;
       height:60vh;
       position:relative;
     }
-    .overlay{
+    .overlay {
       position:absolute;
       inset:0;
-      background:rgba(0,0,0,0.45); /* menos oscura para que se vea más viva */
+      background:rgba(0,0,0,0.45);
       display:flex;
       flex-direction:column;
       align-items:center;
@@ -36,32 +36,45 @@
 </head>
 <body class="font-sans text-gray-800">
 
-  <!-- Header -->
-  <header class="bg-white shadow-md fixed w-full z-50">
+  <!-- HEADER -->
+  <header class="bg-white shadow-md fixed w-full z-50 top-0 left-0">
     <div class="container mx-auto flex justify-between items-center p-4">
       <a href="index.html#inicio">
         <img src="logo-mgservices-group.jpeg" alt="MG Service Group SAS" class="h-16">
       </a>
-      <nav class="hidden md:flex space-x-6 ml-12">
-        <a href="index.html#inicio" class="px-3 py-2 hover:bg-black hover:text-white transition">Inicio</a>
-        <a href="index.html#quienes" class="px-3 py-2 hover:bg-black hover:text-white transition">Quiénes Somos</a>
-        <a href="index.html#servicios" class="px-3 py-2 hover:bg-black hover:text-white transition">Servicios</a>
-        <a href="index.html#proyectos" class="px-3 py-2 hover:bg-black hover:text-white transition">Proyectos</a>
-        <a href="index.html#aliados" class="px-3 py-2 hover:bg-black hover:text-white transition">Aliados</a>
-        <a href="index.html#contacto" class="px-3 py-2 hover:bg-black hover:text-white transition">Contacto</a>
+
+      <!-- Botón hamburguesa -->
+      <button id="menu-btn" class="md:hidden text-gray-800 focus:outline-none">
+        <i data-feather="menu" class="w-8 h-8"></i>
+      </button>
+
+      <!-- Menú principal -->
+      <nav id="menu"
+        class="hidden md:flex space-x-8 ml-12 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent shadow-md md:shadow-none opacity-0 md:opacity-100 transform md:translate-y-0 -translate-y-5 transition-all duration-300 ease-in-out">
+        <a href="index.html#inicio" class="block px-4 py-2 hover:bg-black hover:text-white transition">Inicio</a>
+        <a href="index.html#quienes" class="block px-4 py-2 hover:bg-black hover:text-white transition">Quiénes Somos</a>
+        <a href="index.html#servicios" class="block px-4 py-2 hover:bg-black hover:text-white transition">Servicios</a>
+        <a href="index.html#proyectos" class="block px-4 py-2 hover:bg-black hover:text-white transition">Proyectos</a>
+        <a href="index.html#aliados" class="block px-4 py-2 hover:bg-black hover:text-white transition">Aliados</a>
+        <a href="index.html#contacto" class="block px-4 py-2 hover:bg-black hover:text-white transition">Contacto</a>
       </nav>
     </div>
   </header>
 
-  <!-- Banner -->
+  <!-- Espacio compensatorio para el header fijo -->
+  <div class="h-20 md:h-24"></div>
+
+  <!-- BANNER -->
   <section class="parallax">
     <div class="overlay">
       <h1 class="text-5xl md:text-6xl titulo-fuerte mb-4 drop-shadow-lg">Panel en Poliuretano</h1>
-      <p class="text-lg md:text-xl max-w-2xl text-gray-200">Eficiencia, aislamiento térmico y precisión para cada proyecto.</p>
+      <p class="text-lg md:text-xl max-w-2xl text-gray-200">
+        Eficiencia, aislamiento térmico y precisión para cada proyecto.
+      </p>
     </div>
   </section>
 
-  <!-- Sección 1 -->
+  <!-- SECCIÓN 1 -->
   <section class="py-20 bg-gray-50">
     <div class="container mx-auto px-6 md:px-0 max-w-6xl grid md:grid-cols-2 gap-10 items-center">
       <div>
@@ -82,7 +95,7 @@
     </div>
   </section>
 
-  <!-- Sección 2 -->
+  <!-- SECCIÓN 2 -->
   <section class="py-20 bg-white">
     <div class="container mx-auto px-6 md:px-0 max-w-6xl grid md:grid-cols-2 gap-10 items-center">
       <div class="order-2 md:order-1">
@@ -103,16 +116,16 @@
 
   <!-- CTA -->
   <section class="py-16 bg-[#0e5a83] text-white text-center">
-    <h2 class="text-3xl md:text-4xl titulo-fuerte mb-4">¿Quieres mejorar la eficiencia térmica de tu proyecto?</h2>
-    <p class="text-lg mb-8">Contáctanos para recibir una asesoría personalizada en soluciones termoacústicas.</p>
+    <h2 class="text-3xl md:text-4xl titulo-fuerte mb-4">¿Quieres mejorar la eficiencia de tu proyecto?</h2>
+    <p class="text-lg mb-8">Contáctanos para recibir una asesoría personalizada.</p>
     <a href="index.html#contacto" class="bg-black hover:bg-gray-800 text-white px-10 py-3 rounded-lg transition">Contáctanos</a>
     <br><br>
     <a href="index.html#servicios" class="text-sm underline hover:text-gray-200">← Volver a Servicios</a>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-black text-white pt-12">
-    <div class="container mx-auto px-6 md:px-0 grid md:grid-cols-4 gap-8 border-b border-gray-700 pb-8">
+  <!-- FOOTER -->
+  <footer class="bg-black text-white pt-12 mt-12">
+    <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-4 gap-8 border-b border-gray-700 pb-8">
       <div class="flex flex-col items-start">
         <a href="index.html#inicio"><img src="logo-negro.png" alt="MG Service Group SAS" class="h-20 mb-4"></a>
         <p class="text-sm text-gray-400">© 2025 MG Service Group SAS</p>
@@ -132,8 +145,8 @@
         <h4 class="font-bold mb-4">Contacto</h4>
         <ul class="space-y-2 text-gray-400">
           <li>Email: <a href="mailto:mgservicegroupsas@gmail.com" class="hover:text-blue-400">mgservicegroupsas@gmail.com</a></li>
-          <li>Tel: <a href="tel:+573143101649" class="hover:text-blue-400">+57 314 310 1649</a></li>
-          <li>Tel: <a href="tel:+573102264229" class="hover:text-blue-400">+57 310 226 4229</a></li>
+          <li>Tel 1: <a href="tel:+573143101649" class="hover:text-blue-400">+57 314 310 1649</a></li>
+          <li>Tel 2: <a href="tel:+573102264229" class="hover:text-blue-400">+57 310 226 4229</a></li>
         </ul>
       </div>
       <div>
@@ -150,6 +163,35 @@
     </div>
   </footer>
 
-  <script>feather.replace();</script>
+  <!-- SCRIPTS -->
+  <script>
+  feather.replace();
+
+  // --- BOTÓN HAMBURGUESA ---
+  const menuBtn = document.getElementById("menu-btn");
+  const menu = document.getElementById("menu");
+
+  menuBtn.addEventListener("click", (e) => {
+    e.stopPropagation();
+    menu.classList.toggle("hidden");
+
+    setTimeout(() => {
+      menu.classList.toggle("opacity-100");
+      menu.classList.toggle("translate-y-0");
+      menu.classList.toggle("-translate-y-5");
+    }, 10);
+  });
+
+  document.addEventListener("click", (e) => {
+    if (!menu.contains(e.target) && !menuBtn.contains(e.target)) {
+      if (!menu.classList.contains("hidden") && window.innerWidth < 768) {
+        menu.classList.add("hidden");
+        menu.classList.remove("opacity-100", "translate-y-0");
+        menu.classList.add("-translate-y-5");
+      }
+    }
+  });
+  </script>
+
 </body>
 </html>
